force-app/main/default/objects/Pursuit_Lead_Request__c/Pursuit_Lead_Request__c.object-meta.xml
<CustomObject>
    <description>Request a Pursuit Lead for your opportunity.</description>
    <label>Pursuit Lead Request</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Pursuit Lead Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pursuit Lead Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>