force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Assigned_Pursuit_Lead__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Pursuit_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the Pursuit Lead who is assigned.</description>
    <inlineHelpText>The name of the Pursuit Lead who is assigned.</inlineHelpText>
    <label>Primary Assigned Pursuit Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pursuit_Lead_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>