force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Business_Capability__c.field-meta.xml
<CustomField>
    <fullName>Business_Capability__c</fullName>
    <description>Who are we talking to? Is it employee, sales, service, customer driven?</description>
    <inlineHelpText>Who are we talking to? Is it employee, sales, service, customer driven?</inlineHelpText>
    <label>Business Capability</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>