force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Business_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Business_Drivers__c</fullName>
    <description>Why is this a priority for the prospect/client? (Business Objectives, Technology Renewal/sunset, etc)</description>
    <inlineHelpText>Why is this a priority for the prospect/client? (Business Objectives, Technology Renewal/sunset, etc)</inlineHelpText>
    <label>Business Drivers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>