force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event__c</fullName>
    <description>Part of Selling Through Curiosity</description>
    <inlineHelpText>What&apos;s the compellng event?</inlineHelpText>
    <label>Compelling Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>