force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Current_Salesforce_Customer__c.field-meta.xml
<CustomField>
    <fullName>Current_Salesforce_Customer__c</fullName>
    <inlineHelpText>Yes/No - What products do they have/or going to have that we need to put emphasis on in scoping?</inlineHelpText>
    <label>Current Salesforce Customer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>