force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Current_Situation__c.field-meta.xml
<CustomField>
    <fullName>Current_Situation__c</fullName>
    <description>Part of Selling Through Curiosity</description>
    <inlineHelpText>What&apos;s their current situation?</inlineHelpText>
    <label>Current Situation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>