force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Demo_Co_Prime__c.field-meta.xml
<CustomField>
    <fullName>Demo_Co_Prime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to designate anyone helping with the demo (ex. UX/UI, etc)</description>
    <label>Demo Co-Prime</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pursuit_Lead_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>