force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Demo_Description__c.field-meta.xml
<CustomField>
    <fullName>Demo_Description__c</fullName>
    <description>Used to capture the detailed description of the demo request</description>
    <inlineHelpText>Please provide a detailed description of the demo needs here.</inlineHelpText>
    <label>Demo Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>