force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Demo_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Due_Date__c</fullName>
    <description>Used to set the date a demo is needed by</description>
    <inlineHelpText>Please set the date this demo is needed by.  Note: Custom demos require a minimum of 7 days notice.</inlineHelpText>
    <label>Demo Due Date</label>
    <type>Date</type>
</CustomField>