force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Demo_Effort__c.field-meta.xml
<CustomField>
    <fullName>Demo_Effort__c</fullName>
    <description>Set by the SE, this field is used to identify the relative effort for the Demo Request.</description>
    <inlineHelpText>Set by the SE, this field is used to identify the relative effort for the Demo Request.</inlineHelpText>
    <label>Demo Effort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>