force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Demo_Needed__c.field-meta.xml
<CustomField>
    <fullName>Demo_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to capture if a demo is needed for a pursuit lead</description>
    <inlineHelpText>Please check this box if a demo is needed for this pursuit lead request.  If this is checked, other demo information will be required.</inlineHelpText>
    <label>Demo Needed?</label>
    <type>Checkbox</type>
</CustomField>