force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Demo_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Demo_Next_Steps__c</fullName>
    <description>Used to capture next steps for preparing a demo</description>
    <label>Demo Next Steps</label>
    <type>TextArea</type>
</CustomField>