force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Demo_Owner__c.field-meta.xml
<CustomField>
    <fullName>Demo_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to designate the owner of the demo</description>
    <label>Demo Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pursuit_Lead_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>