force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Demo_Status__c.field-meta.xml
<CustomField>
    <fullName>Demo_Status__c</fullName>
    <description>Set by the SE, this field is used to track the current status of the Demo.</description>
    <inlineHelpText>Set by the SE, this field is used to track the current status of the Demo.</inlineHelpText>
    <label>Demo Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>