force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Demo_Type__c.field-meta.xml
<CustomField>
    <fullName>Demo_Type__c</fullName>
    <description>Used to designated whether a Generic or Custom demo is needed.</description>
    <inlineHelpText>Select the type of demo required.  Generic is for a pre-built generic use case and Custom is for anything outside of the generic.</inlineHelpText>
    <label>Demo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
                <isActive>false</isActive>
                <label>Generic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>