force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Employee_Digital_Bolt__c.field-meta.xml
<CustomField>
    <fullName>Employee_Digital_Bolt__c</fullName>
    <label>Employee Digital Bolt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>