force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Estimated_Effort__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Effort__c</fullName>
    <description>The level of engagement requested from the pursuit lead.</description>
    <inlineHelpText>Enter the date range of engagement and anticipated hours required from the pursuit lead.</inlineHelpText>
    <label>Estimated Effort</label>
    <type>TextArea</type>
</CustomField>