force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Ideal_Solution__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Solution__c</fullName>
    <description>Part of Selling Through Curiosity</description>
    <inlineHelpText>What&apos;s the customer&apos;s ideal solution?</inlineHelpText>
    <label>Ideal Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>