force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Impacts__c.field-meta.xml
<CustomField>
    <fullName>Impacts__c</fullName>
    <description>Part of Selling Through Curiosity</description>
    <inlineHelpText>What are the impacts of not solving the problem?</inlineHelpText>
    <label>Impacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>