force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Known_Budget__c.field-meta.xml
<CustomField>
    <fullName>Known_Budget__c</fullName>
    <description>Do we know a general budget for the project/program?</description>
    <inlineHelpText>Do we know a general budget for the project/program?</inlineHelpText>
    <label>Known Budget</label>
    <type>TextArea</type>
</CustomField>