force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Managed_Services_Request__c.field-meta.xml
<CustomField>
    <fullName>Managed_Services_Request__c</fullName>
    <label>Managed Services Request</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>