force-app/main/default/objects/Pursuit_Lead_Request__c/fields/My_Demo_Request__c.field-meta.xml
<CustomField>
    <fullName>My_Demo_Request__c</fullName>
    <formula>IF(OR( Demo_Owner__r.Id =  $User.Id,  Demo_Co_Prime__r.Id =  $User.Id) , 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Demo Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>