force-app/main/default/objects/Pursuit_Lead_Request__c/fields/of_Days_Open_del__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Open_del__c</fullName>
    <formula>IF(ISBLANK( Assigned_Pursuit_Lead__c),  TODAY() -  Date_Created__c+1, NULL)</formula>
    <label># of Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>