force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>The opportunity that the Pursuit Lead is being requested for.</description>
    <inlineHelpText>The opportunity that the Pursuit Lead is being requested for.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pursuit Lead Requests</relationshipLabel>
    <relationshipName>Pursuit_Lead_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>