force-app/main/default/objects/Pursuit_Lead_Request__c/fields/PLR_Name__c.field-meta.xml
<CustomField>
    <fullName>PLR_Name__c</fullName>
    <formula>HYPERLINK(&quot;https://7summitsagency.my.salesforce.com/&quot; &amp; Id, Opportunity__r.Name + &quot; &quot; + &quot;PLR&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLR Name</label>
    <type>Text</type>
</CustomField>