force-app/main/default/objects/Pursuit_Lead_Request__c/fields/PLR_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>PLR_Next_Steps__c</fullName>
    <inlineHelpText>Next Steps for Pursuit</inlineHelpText>
    <label>PLR Next Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>