force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Preferred_Pursuit_Lead__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pursuit_Lead__c</fullName>
    <label>Preferred Pursuit Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mitul Bhakta</fullName>
            </value>
            <value>
                <fullName>Shannon Gburzynski</fullName>
            </value>
            <value>
                <fullName>Tom Klopfer</fullName>
            </value>
            <value>
                <fullName>Ben Kerford</fullName>
            </value>
            <value>
                <fullName>Cam Redden</fullName>
            </value>
            <value>
                <fullName>James Davidson</fullName>
            </value>
            <value>
                <fullName>Jacob Lappa</fullName>
            </value>
            <value>
                <fullName>Mindy Ferguson</fullName>
            </value>
            <value>
                <fullName>Cullen O&apos;Brien</fullName>
            </value>
            <value>
                <fullName>Deepak Padhye</fullName>
            </value>
            <value>
                <fullName>Alan Haga</fullName>
                <isActive>false</isActive>
                <label>Alan Haga</label>
            </value>
            <value>
                <fullName>Daniel Saldana</fullName>
                <isActive>false</isActive>
                <label>Daniel Saldana</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>