force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Primary_Demo_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Primary_Demo_Scenario__c</fullName>
    <description>Used to designate the Demo scenario</description>
    <inlineHelpText>Please designate the primary demo scenario needed for the demo.</inlineHelpText>
    <label>Primary Demo Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer - B2B</fullName>
            </value>
            <value>
                <fullName>Customer - B2C</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>