force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Problems__c.field-meta.xml
<CustomField>
    <fullName>Problems__c</fullName>
    <description>Part of Selling Through Curiosity</description>
    <inlineHelpText>What problem are we solving? Whose problems are these?</inlineHelpText>
    <label>Problems</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>