force-app/main/default/objects/Pursuit_Lead_Request__c/fields/RFP_Request__c.field-meta.xml
<CustomField>
    <fullName>RFP_Request__c</fullName>
    <description>Is this a Pursuit Lead Request to support a response to an RFP?</description>
    <label>RFP Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>