force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Secondary_Pursuit_Lead__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Pursuit_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Pursuit Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pursuit_Lead_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>