force-app/main/default/objects/Pursuit_Lead_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) Pending Assignment</fullName>
                <default>true</default>
                <label>(1) Pending Assignment</label>
            </value>
            <value>
                <fullName>(2) Assigned</fullName>
            </value>
            <value>
                <fullName>(3) Opportunity Briefing w/ Sales</fullName>
            </value>
            <value>
                <fullName>(4) Requirements Discovery</fullName>
            </value>
            <value>
                <fullName>(5) Level of Effort Estimates (EWB)</fullName>
            </value>
            <value>
                <fullName>(6) Project Guidance Summary</fullName>
            </value>
            <value>
                <fullName>(7) Statement of Work</fullName>
            </value>
            <value>
                <fullName>(8) Knowledge Transfer to Delivery</fullName>
            </value>
            <value>
                <fullName>(9) Complete</fullName>
            </value>
            <value>
                <fullName>(10) Deferred / Cancelled</fullName>
            </value>
            <value>
                <fullName>(11) Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>