force-app/main/default/objects/Pursuit_Lead_Request__c/validationRules/Problems_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Problems_Required</fullName>
    <active>true</active>
    <description>Problems is requiried on the Opportunity in order to create a PLR record.</description>
    <errorConditionFormula>AND(
Opportunity__r.CloseDate&gt;=DATE(2020,04,15),
ISBLANK(Opportunity__r.Problems__c))</errorConditionFormula>
    <errorDisplayField>Problems__c</errorDisplayField>
    <errorMessage>Problems is requiried on the Opportunity in order to create a PLR record. Please update the associated Opportunity record.</errorMessage>
</ValidationRule>