force-app/main/default/objects/Pursuit_Lead_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PLR_Name__c</columns>
    <columns>Assigned_Pursuit_Lead__c</columns>
    <columns>Preferred_Pursuit_Lead__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>(1) Pending Assignment</value>
    </filters>
    <label>All</label>
</ListView>