force-app/main/default/objects/Pursuit_Lead_Request__c/listViews/My_Open_Demo_Requests_LEX.listView-meta.xml
<ListView>
    <fullName>My_Open_Demo_Requests_LEX</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Demo_Type__c</columns>
    <columns>Primary_Demo_Scenario__c</columns>
    <columns>Demo_Effort__c</columns>
    <columns>Demo_Status__c</columns>
    <columns>Demo_Due_Date__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Assigned_Pursuit_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Demo_Needed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>My_Demo_Request__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Demo_Status__c</field>
        <operation>equals</operation>
        <value>Open,Working</value>
    </filters>
    <label>My Open Demo Requests</label>
</ListView>